# advent

./: .gitignore  advent.sublime-project
2016/day10/: script.py
2016/day15/: script.py
2016/day3/: script.py
2016/day5/: script.py
2016/day6/: script.py
2016/day8/: script.py
2016/day9/: script.py
2020/: .aocrunner.json  README.md  package.json
2020/src/day01/: README.md  index.ts
2020/src/day02/: README.md  index.ts
2021/: .aocrunner.json  README.md  package.json
2021/src/day01/: index.ts
2021/src/day02/: index.ts
2021/src/day03/: index.ts
2021/src/day04/: index.ts
2021/src/day05/: index.ts
2021/src/day06/: index.ts
2021/src/day07/: index.ts
2021/src/day08/: index.ts
2021/src/day09/: index.ts
2021/src/day10/: index.ts
2021/src/day11/: index.ts
2021/src/day12/: index.ts
2022/: .aocrunner.json  README.md  package.json  tsconfig.json
2023/: .aocrunner.json  README.md  package.json
advent2018/: Cargo.toml
advent2018/src/: day01.rs  day02.rs  day03.rs  lib.rs
advent2019/: computer.py  run.py
advent2019/day01/: script.py
advent2019/day02/: script.py
advent2019/day03/: script.py
advent2019/day04/: script.py
advent2019/day05/: script.py
day1/: script.py
day11/: script.py
day12/: script.py
day13/: script.py
day14/: script.py
day16/: script.py
day17/: script.py
day18/: script.py
day2/: script.py
day4/: script.py
day7/: script.py
day8/: script.py
day9/: script.py
rust2022/: Cargo.toml
rust2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  lib.rs
(+37 files in other folders)
