[package]
name = "rust2022"
version = "0.1.0"
authors = ["Hermann Käser <hermann.kaser@gmail.com>"]
edition = "2018"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1"
libmath = "0.2.1"
